Release Notes

* 8/20/2015
  * fixed getTasksToBeProcessed to respect priorities of prod tasks
  * changed the limit to avoid inactive sites to prio=800

* 8/18/2015
  * increased the limit on how many times dataset is duplicated in a single cycle

* 8/11/2015
  * removed RRC-KI-T1 from slow site list

* 8/6/2015
  * added a mechanism so that a single task can generate both ES and normal jobs

* 8/5/2015
  * changed PJB for zero-walltime to avoid short queues

* 8/4/2015
  * changed locCheck to cloudLocCheck

* 8/3/2015
  * changed PP so that child tasks immediately go to finished w/o exhausted when all inputs are successful
  * added cloud locality check
  * added failWhenGoalUnreached

* 7/30/2015
  * fixed AtlasPJB to check inactive sites with nActivated>0

* 7/30/2015
  * changed AtlasPJB to avoid inactive sites for job.prio>=900

* 7/16/2015
  * changed AtlasPJB to avoid slow sites for job.prio>=900

* 7/14/2015
  * sending scouts to sites where walltime is more than 24h

* 7/13/2015
  * fixed getSubChunk to correctly take secondary files into account

* 7/10/2015
  * changed cpuTime for scouts to always update the value
  * changed walltime messages more informative

* 7/9/2015
  * added job cloning
  * added message to errorDialog when goal is reached

* 7/8/2015
  * fixed retryTask to reset picked files
  * setting amiFlag
  * changed goal to have the first decimal place
  * changed child tasks not to go done when parents are not done
  * fixed reactivatePendingTasks to timeout child tasks correctly
  * increased upper limit of outdiskcount to 10MB

* 7/7/2015
  * added goal
  * added transient flag to datasets

* 7/6/2015
  * added size check in taskParam copy from DEFT

* 6/26/2015
  * added 50% of safety mergin to cpuTime
  * added more message for input file shortage
  * fixed maxWalltime for CPU efficiency
  * added stayOutputOnSite

* 6/24/2015
  * decomposed INSERT+SELECT to copy task params from DEFT